<resources>
    <string name="app_name">Miloo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Seu e-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">ENTRAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Ops...</string>
    <string name="error_invalid_password">Ops...</string>
    <string name="error_incorrect_password">Ops...</string>
    <string name="error_field_required">Ops...</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="Esqueceu">Esqueci minha senha</string>
    <string name="Cadastre_se">CADASTRE-SE</string>
    <string name="Enviar">ENVIAR</string>
    <string name="Cadastrar">CADASTRAR</string>
    <string name="NomeCompleto">Nome completo</string>
    <string name="DataNasc">Data de nascimento</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lorem">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</string>


    <string-array name="configuracoes_titulo">
        <item>Editar dados</item>
        <item>Meus endereços</item>
        <item> </item>
        <item>Fale conosco</item>
        <item>Envivar convite</item>
        <item>Termos de uso</item>
        <item>Sair</item>
    </string-array>

    <string-array name="sim_nao">
        <item>Sim</item>
        <item>Não</item>
    </string-array>


    <string-array name="um_dez">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="lista_titulo">
        <item>Titulo 01</item>
        <item>Titulo 02</item>
        <item>Titulo 03</item>
        <item>Titulo 04</item>
        <item>Titulo 05</item>
        <item>Titulo 06</item>
        <item>Titulo 07</item>
        <item>Titulo 08</item>
        <item>Titulo 09</item>
        <item>Titulo 10</item>
    </string-array>

    <string-array name="lista_subtitulo">
        <item>SubTitulo 01</item>
        <item>SubTitulo 02</item>
        <item>SubTitulo 03</item>
        <item>SubTitulo 04</item>
        <item>SubTitulo 05</item>
        <item>SubTitulo 06</item>
        <item>SubTitulo 07</item>
        <item>SubTitulo 08</item>
        <item>SubTitulo 09</item>
        <item>SubTitulo 10</item>
    </string-array>

    <string-array name="lista_extra">
        <item>Extra 01</item>
        <item>Extra 02</item>
        <item>Extra 03</item>
        <item>Extra 04</item>
        <item>Extra 05</item>
        <item>Extra 06</item>
        <item>Extra 07</item>
        <item>Extra 08</item>
        <item>Extra 09</item>
        <item>Extra 10</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
